# SkyrimCharacterSheet

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ShowStats.toml  SkyrimCharacterSheet.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cleanup-cache.yml  clear-cache-cron.yml  clear-cache-manual.yml  codeql.yml  main-build-tag.yml  main-tag.yml  main.yml  maintain.yml
Documentation/: Building.md
cmake/: Version.h.in  headerlist.cmake  sourcelist.cmake  version.rc.in
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
cmake/ports/unordered-dense/: portfile.cmake  vcpkg.json
config/: SkyrimCharacterSheet.ini  SkyrimCharacterSheet_Champion.json  SkyrimCharacterSheet_Faction.json  SkyrimCharacterSheet_Input.json  SkyrimCharacterSheet_Keys.json  SkyrimCharacterSheet_Menu.json  SkyrimCharacterSheet_ModDetection.json  SkyrimCharacterSheet_Player.json  SkyrimCharacterSheet_Player_LastSeed.json  SkyrimCharacterSheet_Thane.json
fomod/: build_zip.py  git_bash_cmd.txt
fomod/ShowStats/fomod/: Info.xml  ModuleConfig.xml
include/: Events.h  PCH.h  Papyrus.h  Serialhelper.h  ShowHandler.h  constants.h  hooks.h  player.h  settings.h  utils.h  version.h
include/CLIK/: Array.h  MovieClip.h  Object.h  TextField.h
include/data/: faction.h  factiondata.h  player.h  thane.h
include/scaleform/: factionmenu.h  scaleform.h  statsmenu.h
include/settings/: settings.h
include/stats/: champion.h  faction.h  factionfiller.h  statfiller.h  statholder.h
interface/Translations/: ShowStats_english.txt
mcm/: ShowStats.esp
mcm/scripts/: ShowStats.pex  ShowStats_MCM.pex
scripts/: archive_artifacts.py  cmake_generate.py  run.sh  zip_cmd_git_bash.txt
scripts/source/: ShowStats.psc  ShowStats_MCM.psc
src/: Events.cpp  PCH.h  Papyrus.cpp  Serialhelper.cpp  ShowHandler.cpp  constants.h  events.h  hooks.cpp  main.cpp  player.cpp  showhandler.h  utils.h
src/CLIK/: Array.h  MovieClip.h  Object.h  TextField.h  TweenMainWidget.h
src/actor/: champion.cpp  champion.h  faction.cpp  faction.h  player.cpp  player.h  thane.cpp  thane.h
src/data/: faction.cpp  factiondata.cpp  factiondata.h  player.cpp  playerdata.cpp  playerdata.h  thane.cpp
src/data/faction/: champion.h  faction.h  factionitem.h  thane.h
src/data/stats/: statitem.h
src/event/: equip_event.cpp  equip_event.h  event.cpp  event.h  input_event.cpp  input_event.h  menu_open_close_event.cpp  menu_open_close_event.h
src/events/: equipmanager.h  keymanager.h  menumanager.h
src/handler/: show_handler.cpp  show_handler.h  showhandler.h
src/hook/: hook.cpp  hook.h  inventory_3d_manager_hook.cpp  inventory_3d_manager_hook.h  menu_control_hook.cpp  menu_control_hook.h
src/input/: menu_key_input_holder.cpp  menu_key_input_holder.h
src/mod/: armor_rating_rescaled_remake.cpp  armor_rating_rescaled_remake.h  blade_and_blunt.cpp  blade_and_blunt.h  mod.cpp  mod.h  mod_manager.cpp  mod_manager.h
src/scaleform/: factionmenu.cpp  factionmenu.h  scaleform.cpp  scaleform.h  statsmenu.cpp  statsmenu.h
src/scaleform/menus/: faction_menu.cpp  faction_menu.h  factionmenu.cpp  factionmenu.h  stats_inventory_menu.cpp  stats_inventory_menu.h  stats_menu.cpp  stats_menu.h  statsinventorymenu.h  statsmenu.cpp  statsmenu.h  tween_hint_menu.cpp  tween_hint_menu.h
src/setting/: config_setting.cpp  config_setting.h  game_setting.cpp  game_setting.h  ini_setting.h  input_setting.cpp  input_setting.h  key_setting.cpp  key_setting.h  mod_detection.cpp  mod_detection.h  setting.cpp  setting.h
src/setting/data/: champion_data.h  faction_data.h  key_data.h  menu_data.h  player_data.h  thane_data.h
src/settings/: gamesettings.h  settings.h
src/stats/: champion.cpp  champion.h  faction.cpp  faction.h  factionfiller.cpp  factionfiller.h  factionholder.cpp  factionholder.h  statfiller.cpp  statfiller.h  statholder.cpp  statholder.h  thane.cpp  thane.h
src/util/: file.cpp  file.h  form.cpp  form.h  key_util.cpp  key_util.h  menukeys.h  translation.cpp  translation.h  type_util.cpp  type_util.h  utils.h
src/utils/: constants.h  iconkeys.h  menukeys.h  offset.h  perkvisitor.h  utils.h
swf/: ShowFactions.fla  ShowFactions_light.fla  ShowFactions_paper.fla  ShowStats.ai  ShowStats.fla  ShowStatsInventory.fla  ShowStats_light.fla  ShowStats_paper.fla
swf/ShowStats/: ButtonBar.as  InfoBar.as  ItemInfo.ai  ItemInfo.as  ListItemRenderer.ai  ListItemRenderer.as  ScrollingList.as
swf/Translations/: ShowStats_english.txt  SkyrimCharacterSheet_english.txt
swf/standard/: ShowFactions.swf  ShowStats.swf  ShowStatsInventory.swf
swf/utils/: ShowStats.ai
(+40 files in other folders)
